FIX: Fixed Issue with NewsLetter Responsiveness on Mobile Phone.

--- a/styles/artists.css
+++ b/styles/artists.css
@@ -493,6 +493,9 @@ footer img {
     font-size: 2.5rem !important;
   }
 
+  .CTA h2 {
+    font-size: 2.2rem !important;
+  }
   .footer-main {
     /* gap: 4rem; */
     flex-wrap: wrap;
