--- a/styles/restaurantDetail.css
+++ b/styles/restaurantDetail.css
@@ -409,6 +409,9 @@ footer img {
     font-size: 2.5rem !important;
   }
 
+  .CTA h2 {
+    font-size: 2.2rem !important;
+  }
   .footer-main {
     /* gap: 4rem; */
     flex-wrap: wrap;
